merge issues